fixed overlapping cell titles/subtitles and centered text

--- a/project1/css/discovery.css
+++ b/project1/css/discovery.css
@@ -69,12 +69,14 @@ h5 {
 
 .cell_title {
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 20%;              
     left: 50%;
     transform: translate(-50%, -50%); 
     font-size: 2em;
     display: block;
+    text-align: center;
+
 }
 
 .cell_title:hover {
@@ -89,6 +91,7 @@ h5 {
     transform: translate(-50%, -50%); 
     font-size: 1.4em;
     display: block;
+    text-align: center;
 }
 
 .cell_footer {
